Revision history for HON-Http-UrlChecker-Service

0.02    ?? ??? 2016
        Convert status code to integer

0.01    12 Jul 2016
        First version, released on an unsuspecting world.