@@ -2,6 +2,7 @@ Revision history for HON-Http-UrlChecker-Service
 
 0.02    ?? ??? 2016
         Convert status code to integer
+        Convert status message with first character in uppercase
 
 0.01    12 Jul 2016
         First version, released on an unsuspecting world.
